# gnt_vocab

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: gnt.db
scripts/: load_lemma.py
vocab/: __init__.py  config.py
vocab/db/: connection.py
