[project]
name = "gnt-vocab"
version = "0.1.0"
description = "Application to help learn vocabulary words from the Greek New Testament."
authors = [
    {name = "Andrew Wright",email = "andrew98wright@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
